--- a/client-data/board.html
+++ b/client-data/board.html
@@ -121,6 +121,7 @@
 	<script src="tools/text/text.js"></script>
 	<script src="tools/eraser/eraser.js"></script>
 	<script src="tools/transform/transform.js"></script>
+	<script src="tools/document/document.js"></script>
 	<script src="tools/hand/hand.js"></script>
 	<script src="tools/grid/grid.js"></script>
 	<script src="tools/clear/clear.js"></script>
