Updated the transform tools dragging and selection handlers.
Fixed an issue with dragging the calculator

Fixed an issue with unwanted text selection

--- a/client-data/board.html
+++ b/client-data/board.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -144,7 +144,7 @@
 	<script src="tools/undo/undo.js"></script>
 	<script src="tools/redo/redo.js"></script>
 	<script src="tools/zoom-in/zoom-in.js"></script>
-        <script src="tools/zoom-out/zoom-out.js"></script>
+    	<script src="tools/zoom-out/zoom-out.js"></script>
 	<script src="js/canvascolor/canvascolor.min.js"></script>
 
 </body>
