Update the index file

--- a/client-data/index.html
+++ b/client-data/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8" />
-	<title>WBO — Online collaborative whiteboard</title>
+	<title>WB — Online collaborative whiteboard</title>
 	<link rel="icon" type="image/png" href="favicon.ico" />
 	<link rel="stylesheet" href="index.css" />
 	<meta name="description" content="A free online whiteboard for realtime collaboration. Draw, write text and sketch new ideas together on whitebophir"/>
@@ -16,18 +16,18 @@
 <body>
 
 <header>
-	<h1>Whitebophir</h1> - <h2>Welcome</h2>
+	<h1>WB</h1> - <h2>Welcome</h2>
 </header>
 
 <main>
-<p>Welcome to <b>WBO</b>. You can go to <a href="/boards/anonymous">the public board</a>
+<p>Welcome to <b>WB</b>. You can go to <a href="./board.html">the public board</a>
 or create a new one using the form below.
 </p><p>
 To collaborate on a drawing in real time with someone,
 just send them its URL.
 </p>
 
-<form action="boards" method="GET">
+<form action="./board.html" method="GET">
 	<input type="text" id="board" name="board" placeholder="Name of the board..."/>
 	<input type="submit" value="Go">
 </form>
@@ -35,7 +35,7 @@ just send them its URL.
 
 
 <footer>
-	<a href="https://github.com/lovasoa/whitebophir" class="smallink">Source code on github</a>
+	<a href="https://github.com/rdbeach/wb" class="smallink">Source code on github</a>
 </footer>
 	
 </body>
