--- a/client-data/board.html
+++ b/client-data/board.html
@@ -34,6 +34,7 @@
 		});
 	</script>
 	<div id="loadingMessage">Loading</div>
+	<div id="overlay"></div>
 	<div id="shape-lock" class="shape-lock">
 		<i id="shape-lock-icon" class="fas fa-unlock"></i>
 	</div>
