Put in a user counter.
Improved the calculation of the dimensions of the transform's bounding rectangle, factoring in the current transform and the stroke-width.

Added an arrow tool.

--- a/client-data/board.html
+++ b/client-data/board.html
@@ -43,9 +43,10 @@
 	<div id="shape-lock" class="shape-lock">
 		<i id="shape-lock-icon" class="fas fa-unlock"></i>
 	</div>
+	<div id="usercount"></div>
 	<div id="compass">
 		<div id="north" class='direction'><i class="fas fa-chevron-up"></i></div>
-		<div id="west" class='direction'><i class="fas fa-chevron-left"></i></div>
+		<div id="west" class='direction'><i class="fas fa-chevron-left"></i></div>	
 		<div id="east" class='direction'><i class="fas fa-chevron-right"></i></div>
 		<div id="south" class='direction'><i class="fas fa-chevron-down"></i></div>
 	</div>
