Forgot to reset the firepad_config

--- a/client-data/board.html
+++ b/client-data/board.html
@@ -230,9 +230,7 @@
 	<script>
 		var firepad_config = {
 			apiKey: '<API_KEY>',
-			authDomain: "firepad-tests.firebaseapp.com",
-			databaseURL: "https://firepad-tests.firebaseio.com",
-			childref: "-M8gOdeQOJOAzcTKFuXE"
+        		databaseURL: 'https://<DATABASE_NAME>.firebaseio.com'
 		};
 	</script>
 	<script src="https://www.gstatic.com/firebasejs/5.5.4/firebase.js"></script>
