--- a/client-data/board.html
+++ b/client-data/board.html
@@ -230,6 +230,7 @@
 	<script>
 		var firepad_config = {
 			apiKey: '<API_KEY>',
+			authDomain: "<AUTH_DOMAIN>.firebaseapp.com",
         		databaseURL: 'https://<DATABASE_NAME>.firebaseio.com'
 		};
 	</script>
